# Identity

./: .gitignore  AGENTS.md  Cargo.toml  README.md  latest_commit.diff  start-identity-hidden.cmd  start-identity.cmd
crates/identityd/: Cargo.toml
crates/identityd/src/: activity.rs  bootstrap.rs  browser_capture.rs  capture.rs  clipboard.rs  context_builder.rs  context_snapshot.rs  crypto.rs  delta.rs  embedding.rs  filesystem.rs  hotkey.rs  identity.rs  idle.rs  ingest_safety.rs  lib.rs  main.rs  processor.rs  project_profile.rs  proxy.rs  resource.rs  slice.rs  transit.rs  vector_store.rs  workspace.rs
crates/sovereignd/: Cargo.toml
crates/sovereignd/src/: embedding.rs  filesystem.rs  identity.rs  idle.rs  ingest_safety.rs  lib.rs  main.rs  processor.rs  proxy.rs  slice.rs  transit.rs  workspace.rs
docs/: agent-constraints-and-performance-budget.md  bidirectional-state-synchronization-architecture.md  engineering-roadmap.md  ephemeral-handshake-architecture.md  go-to-market-plan.md  local-vector-synthesis-architecture.md  manifesto.md  strategic-threat-vector-analysis.md  system-map.md  technical-challenges-and-moats.md
scripts/: start-identity-hidden.ps1  test-identity-hotkey.ps1  test-identity-page-capture.ps1
test_workspace/: capture.token
