[package]
name = "identityd"
version = "0.1.0"
edition = "2021"
description = "Local daemon core for Identity .me state ingestion"

[dependencies]
arrow-array = "58.3"
arrow-schema = "58.3"
futures-util = "0.3"
lancedb = { version = "0.30", default-features = false }
lol_html = "2.7"
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "net", "rt", "signal", "time"] }
