[package]
name = "identityd"
version = "0.1.0"
edition = "2021"
description = "Local daemon core for Identity .me state ingestion"

[features]
default = []
lancedb-backend = ["dep:arrow-array", "dep:arrow-schema", "dep:futures-util", "dep:lancedb"]

[dependencies]
arrow-array = { version = "58.3", optional = true }
arrow-schema = { version = "58.3", optional = true }
futures-util = { version = "0.3", optional = true }
lancedb = { version = "0.30", default-features = false, optional = true }
lol_html = "2.7"
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }
tokio = { version = "1.48", features = ["macros", "net", "rt", "signal", "time"] }
