[package]
name = "sovereignd"
version = "0.1.0"
edition = "2021"
description = "Local daemon core for Sovereign .me state ingestion"

[dependencies]
lol_html = "2.7"
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }
tokio = { version = "1.48", features = ["macros", "net", "rt", "time"] }
